// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  sx={Object {}}
>
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      my={1}
    >
      <CenterSpinner />
    </ForwardRef(Box)>
  </GlobalMenu>
  <BoxModal
    disableClickOutside={true}
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "90vh",
          "overflowY": "auto",
          "px": 2,
        }
      }
    >
      <SpecialMapSettingForm />
    </ForwardRef(Box)>
  </BoxModal>
  <ForwardRef(Snackbar)
    autoHideDuration={6000}
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Alert)
      onClose={[Function]}
      sx={
        Object {
          "width": "100%",
        }
      }
      variant="filled"
    />
  </ForwardRef(Snackbar)>
  <SwipeableEdgeDrawer
    bleedingHeight={56}
    edgeLabel={
      <CloseFormButton
        onClose={[Function]}
      />
    }
    edgeLabelWhenClosed="編集中"
    heightRatio={80}
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    show={false}
  >
    <SpecialMapMarkerForm
      defaultPark="L"
      onClickMiniMap={[Function]}
      specialMapId={0}
    />
  </SwipeableEdgeDrawer>
  <DeleteConfirmDialog
    deleting={false}
    onClose={[Function]}
    onDelete={[Function]}
    open={false}
    title="マーカーを削除しますか？"
  />
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests focusing a marker 1`] = `
<ForwardRef(Box)
  sx={Object {}}
>
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      my={1}
    >
      <CenterSpinner />
    </ForwardRef(Box)>
  </GlobalMenu>
  <BoxModal
    disableClickOutside={true}
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "90vh",
          "overflowY": "auto",
          "px": 2,
        }
      }
    >
      <SpecialMapSettingForm />
    </ForwardRef(Box)>
  </BoxModal>
  <ForwardRef(Snackbar)
    autoHideDuration={6000}
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Alert)
      onClose={[Function]}
      sx={
        Object {
          "width": "100%",
        }
      }
      variant="filled"
    />
  </ForwardRef(Snackbar)>
  <SwipeableEdgeDrawer
    bleedingHeight={56}
    edgeLabel={
      <CloseFormButton
        onClose={[Function]}
      />
    }
    edgeLabelWhenClosed="編集中"
    heightRatio={80}
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    show={false}
  >
    <SpecialMapMarkerForm
      defaultPark="L"
      onClickMiniMap={[Function]}
      specialMapId={0}
    />
  </SwipeableEdgeDrawer>
  <DeleteConfirmDialog
    deleting={false}
    onClose={[Function]}
    onDelete={[Function]}
    open={false}
    title="マーカーを削除しますか？"
  />
  <BoxModal
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Box)
      p={3}
    >
      <ForwardRef(Typography)
        align="center"
        mb={1}
        variant="h6"
      >
        SNSでこのマップをシェアする
      </ForwardRef(Typography)>
      <ShareButtons
        description="定番から穴場まで、ディズニーのトイレマップです。"
        title="トイレマップ"
        url="http://localhost/special-maps/1"
      />
    </ForwardRef(Box)>
  </BoxModal>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests loaded (pc) 1`] = `
<ForwardRef(Box)
  sx={Object {}}
>
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      my={1}
    >
      <CenterSpinner />
    </ForwardRef(Box)>
  </GlobalMenu>
  <BoxModal
    disableClickOutside={true}
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "90vh",
          "overflowY": "auto",
          "px": 2,
        }
      }
    >
      <SpecialMapSettingForm />
    </ForwardRef(Box)>
  </BoxModal>
  <ForwardRef(Snackbar)
    autoHideDuration={6000}
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Alert)
      onClose={[Function]}
      sx={
        Object {
          "width": "100%",
        }
      }
      variant="filled"
    />
  </ForwardRef(Snackbar)>
  <RightDrawer
    onClose={[Function]}
    open={false}
  >
    <SpecialMapMarkerForm
      defaultPark="L"
      onClickMiniMap={[Function]}
      specialMapId={0}
    />
  </RightDrawer>
  <DeleteConfirmDialog
    deleting={false}
    onClose={[Function]}
    onDelete={[Function]}
    open={false}
    title="マーカーを削除しますか？"
  />
  <BoxModal
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Box)
      p={3}
    >
      <ForwardRef(Typography)
        align="center"
        mb={1}
        variant="h6"
      >
        SNSでこのマップをシェアする
      </ForwardRef(Typography)>
      <ShareButtons
        description="定番から穴場まで、ディズニーのトイレマップです。"
        title="トイレマップ"
        url="http://localhost/special-maps/1"
      />
    </ForwardRef(Box)>
  </BoxModal>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests loaded 1`] = `
<ForwardRef(Box)
  sx={Object {}}
>
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      my={1}
    >
      <CenterSpinner />
    </ForwardRef(Box)>
  </GlobalMenu>
  <BoxModal
    disableClickOutside={true}
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "90vh",
          "overflowY": "auto",
          "px": 2,
        }
      }
    >
      <SpecialMapSettingForm />
    </ForwardRef(Box)>
  </BoxModal>
  <ForwardRef(Snackbar)
    autoHideDuration={6000}
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Alert)
      onClose={[Function]}
      sx={
        Object {
          "width": "100%",
        }
      }
      variant="filled"
    />
  </ForwardRef(Snackbar)>
  <SwipeableEdgeDrawer
    bleedingHeight={56}
    edgeLabel={
      <CloseFormButton
        onClose={[Function]}
      />
    }
    edgeLabelWhenClosed="編集中"
    heightRatio={80}
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    show={false}
  >
    <SpecialMapMarkerForm
      defaultPark="L"
      onClickMiniMap={[Function]}
      specialMapId={0}
    />
  </SwipeableEdgeDrawer>
  <DeleteConfirmDialog
    deleting={false}
    onClose={[Function]}
    onDelete={[Function]}
    open={false}
    title="マーカーを削除しますか？"
  />
  <BoxModal
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Box)
      p={3}
    >
      <ForwardRef(Typography)
        align="center"
        mb={1}
        variant="h6"
      >
        SNSでこのマップをシェアする
      </ForwardRef(Typography)>
      <ShareButtons
        description="定番から穴場まで、ディズニーのトイレマップです。"
        title="トイレマップ"
        url="http://localhost/special-maps/1"
      />
    </ForwardRef(Box)>
  </BoxModal>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests loading markers 1`] = `
<ForwardRef(Box)
  sx={Object {}}
>
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      my={1}
    >
      <CenterSpinner />
    </ForwardRef(Box)>
  </GlobalMenu>
  <BoxModal
    disableClickOutside={true}
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "90vh",
          "overflowY": "auto",
          "px": 2,
        }
      }
    >
      <SpecialMapSettingForm />
    </ForwardRef(Box)>
  </BoxModal>
  <ForwardRef(Snackbar)
    autoHideDuration={6000}
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Alert)
      onClose={[Function]}
      sx={
        Object {
          "width": "100%",
        }
      }
      variant="filled"
    />
  </ForwardRef(Snackbar)>
  <SwipeableEdgeDrawer
    bleedingHeight={56}
    edgeLabel={
      <CloseFormButton
        onClose={[Function]}
      />
    }
    edgeLabelWhenClosed="編集中"
    heightRatio={80}
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    show={false}
  >
    <SpecialMapMarkerForm
      defaultPark="L"
      onClickMiniMap={[Function]}
      specialMapId={0}
    />
  </SwipeableEdgeDrawer>
  <DeleteConfirmDialog
    deleting={false}
    onClose={[Function]}
    onDelete={[Function]}
    open={false}
    title="マーカーを削除しますか？"
  />
  <BoxModal
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Box)
      p={3}
    >
      <ForwardRef(Typography)
        align="center"
        mb={1}
        variant="h6"
      >
        SNSでこのマップをシェアする
      </ForwardRef(Typography)>
      <ShareButtons
        description="定番から穴場まで、ディズニーのトイレマップです。"
        title="トイレマップ"
        url="http://localhost/special-maps/1"
      />
    </ForwardRef(Box)>
  </BoxModal>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests without height 1`] = `
<ForwardRef(Box)
  sx={Object {}}
>
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      my={1}
    >
      <CenterSpinner />
    </ForwardRef(Box)>
  </GlobalMenu>
  <BoxModal
    disableClickOutside={true}
    onClose={[Function]}
    open={false}
    showCloseButton={true}
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "90vh",
          "overflowY": "auto",
          "px": 2,
        }
      }
    >
      <SpecialMapSettingForm />
    </ForwardRef(Box)>
  </BoxModal>
  <ForwardRef(Snackbar)
    autoHideDuration={6000}
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(Alert)
      onClose={[Function]}
      sx={
        Object {
          "width": "100%",
        }
      }
      variant="filled"
    />
  </ForwardRef(Snackbar)>
  <SwipeableEdgeDrawer
    bleedingHeight={56}
    edgeLabel={
      <CloseFormButton
        onClose={[Function]}
      />
    }
    edgeLabelWhenClosed="編集中"
    heightRatio={80}
    onClose={[Function]}
    onOpen={[Function]}
    open={false}
    show={false}
  >
    <SpecialMapMarkerForm
      defaultPark="L"
      onClickMiniMap={[Function]}
      specialMapId={0}
    />
  </SwipeableEdgeDrawer>
  <DeleteConfirmDialog
    deleting={false}
    onClose={[Function]}
    onDelete={[Function]}
    open={false}
    title="マーカーを削除しますか？"
  />
</ForwardRef(Box)>
`;
